--- a/src/app/media-item/media-item.component.html
+++ b/src/app/media-item/media-item.component.html
@@ -1,6 +1,11 @@
 
 <h2>{{mediaItem.name}}</h2>
-<div>{{mediaItem.watchedOn}}</div>
+<!-- syntactic sugar to use *ngIf-->
+<!--  <div *ngIf="mediaItem.watchedOn">{{mediaItem.watchedOn}}</div>  -->
+<!--  Use the below ng-template when multiple elements on the same condition -->
+<ng-template [ngIf]="mediaItem.watchedOn">
+    <div>{{ mediaItem.watchedOn }}</div>
+  </ng-template>
 <div>{{mediaItem.category}}</div>
 <div>{{mediaItem.year}}</div>
 <div class="tools">
