--- a/src/app/media-item-list/media-item-list.component.html
+++ b/src/app/media-item-list/media-item-list.component.html
@@ -1,1 +1,8 @@
-<p>media-item-list works!</p>
+<section>
+    <!--
+     <mw-media-item [mediaItem]="mediaItems[0]"
+      (delete)="onMediaItemDelete($event)"></mw-media-item>       
+    -->
+    <mw-media-item *ngFor="let mediaItem of mediaItems" [mediaItem]="mediaItem"
+      (delete)="onMediaItemDelete($event)"></mw-media-item>
+  </section>
