--- a/src/app/media-item-list/media-item-list.component.html
+++ b/src/app/media-item-list/media-item-list.component.html
@@ -4,5 +4,7 @@
       (delete)="onMediaItemDelete($event)"></mw-media-item>       
     -->
     <mw-media-item *ngFor="let mediaItem of mediaItems" [mediaItem]="mediaItem"
-      (delete)="onMediaItemDelete($event)"></mw-media-item>
+      (delete)="onMediaItemDelete($event)"
+      [ngClass]="{'medium-movies': mediaItem.medium === 'Movies', 'medium-series': mediaItem.medium === 'Series'}">
+    </mw-media-item>
   </section>
