custom pipe to get category list

--- a/src/app/media-item-list/media-item-list.component.html
+++ b/src/app/media-item-list/media-item-list.component.html
@@ -1,3 +1,7 @@
+
+<header>
+    <div *ngIf="mediaItems">{{ mediaItems | categoryList }}</div>
+  </header>
 <section>
     <!--
      <mw-media-item [mediaItem]="mediaItems[0]"
