--- a/src/app/media-item-list/media-item-list.component.html
+++ b/src/app/media-item-list/media-item-list.component.html
@@ -8,7 +8,8 @@
       [ngClass]="{'medium-movies': mediaItem.medium==='Movies', 'medium-series':mediaItem.medium==='Series'}" 
       *ngFor="let mediaItem of mediaItems"
       [mediaItem]="mediaItem"
-      (delete)="onMediaItemDelete($event)"></mw-media-item>
+      (delete)="onMediaItemDelete($event)"
+      (click)="onClickItem(mediaItem)"></mw-media-item>
   </section>
   <footer>
     <a routerLink="/add">
