--- a/src/app/media-item/media-item.component.html
+++ b/src/app/media-item/media-item.component.html
@@ -7,7 +7,7 @@
 <ng-template [ngIf]="mediaItem.watchedOn">
     <div>{{ mediaItem.watchedOn | date: 'shortDate' }}</div>
   </ng-template>
-<div>{{mediaItem.category}}</div>
+<div class="label">{{mediaItem.category}}</div>
 <div>{{mediaItem.year}}</div>
 <div class="tools">
   <svg [mwFavorite]="mediaItem.isFavorite" class="favorite" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
