--- a/src/styles.css
+++ b/src/styles.css
@@ -38,3 +38,9 @@ body {
     font-style: italic;
     width: max-content;
   }
+
+.formInputField {
+    display: flex;
+    justify-content: space-between;
+    width: 250px;
+  }
