--- a/src/app/edit-item-form/edit-item-form.component.css
+++ b/src/app/edit-item-form/edit-item-form.component.css
@@ -19,6 +19,7 @@
     box-shadow: 0 1px 2px rgba(0,0,0,0.2) inset, 0 -1px 0 rgba(0,0,0,0.05) inset;
     border-color: #53ace4;
     padding: 6px;
+    text-align:right;
   }
   .ng-invalid:not(.ng-pristine):not(.required-invalid) {
     border: 1px solid #d93a3e;
