change update button

--- a/src/app/edit-item-form/edit-item-form.component.html
+++ b/src/app/edit-item-form/edit-item-form.component.html
@@ -42,5 +42,5 @@
           </div>
       </li>
     </ul>
-    <button type="submit" [disabled]="!form.valid">Save</button>
+    <button type="submit" [disabled]="!form.valid">Update</button>
   </form>
